--- a/web/src/app/audio/audio.component.scss
+++ b/web/src/app/audio/audio.component.scss
@@ -82,3 +82,117 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// mobile
+
+.div1-mobile {
+    width: 100%;
+    height: 60vh;
+    position: relative;
+
+    background-image: url("../../assets/definitive/4.jpg");
+    background-size: 50%;
+    background-position-x: right;
+    background-position-y: center;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .image {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    .text {
+        position: absolute;
+        color: $color_4;
+        h1 {
+            font-size: 3rem;
+            margin-top: 2em;
+        }
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+}
+
+.title-mobile {
+    background-color: $dark;
+    text-align: center;
+    padding: 1.5em;
+    // margin-top: 1em;
+    margin-bottom: 1em;
+    h1 {
+        color: $dark;
+        -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: $mediumgray;
+        font-size: 2em;
+        margin: 0em;
+    }
+    .fas {
+        font-size: 2em;
+        color: $pink;
+    }
+}
+
+.footer-separator {
+    height: 6em;
+}
+
+.audios-mobile {
+    .list {
+        background-color: white;
+        list-style-type: none;
+        margin-top: 2em;
+        .element {
+            padding: 1em;
+        }
+        audio {
+            width: 90%;
+            margin: 1em;
+        }
+        h1 {
+            color: $dark;
+            -webkit-text-fill-color: $color_3; /* Will override color (regardless of order) */
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: $dark;
+        }
+        hr {
+            margin: 0em;
+            background: $pink;
+            margin-right: 2em;
+        }
+    }
+}
