--- a/web/src/app/event/event.component.scss
+++ b/web/src/app/event/event.component.scss
@@ -10,15 +10,16 @@ br {
  }
 
 .title {
-    background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
-    height: 2.7em; //watch this
-    width: 20%;
+    width: 100%;
     padding: 0em 1em 0em 1em;
     margin-top: 1em;
     position: relative;
     transform: skew(-10deg);
+    height: 2.7em; //watch this
     .text {
+        height: 2.7em; //watch this
         position: absolute;
+        background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
     }
 }
 
@@ -189,17 +190,17 @@ br {
 
 // MOBILE
 
-
 .title-mobile {
-    background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
-    height: 2.7em; //watch this
-    width: 20%;
+    width: 100%;
     padding: 0em 1em 0em 1em;
     margin-top: 1em;
     position: relative;
     transform: skew(-10deg);
+    height: 2.7em; //watch this
     .text {
+        height: 2.7em; //watch this
         position: absolute;
+        background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
     }
 }
 
@@ -219,16 +220,16 @@ br {
             margin: 1em;
             background: white;
             height: 50%;
-            // width: 8%;
+            width: 8%;
             border-color: white;
         }
     }
     .imageDiv-mobile {
         width: 100%;
-        height: 50%;
+        height: 100%;
         display: flex;
         justify-content: center;
-        .image{
+        .image {
             width: auto;
             max-width: 80%;
             height: auto;
@@ -238,83 +239,16 @@ br {
     }
 }
 
-.div1-mobile {
-    width: 100%;
-    height: 40vh;
-    position: relative;
-    .image {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-    }
-    .text {
-        position: absolute;
-        margin: 2em;
-        color: $color_4;
-    }
-    .bottom {
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 5vh;
-        display: flex;
-        justify-content: center;
-        .text {
-            background: $dark;
-            color: $color_3;
-            width: auto;
-            display: inline-block;
-            padding: 0em 1em 1em 1em;
-            margin: 0em;
-            height: 5vh;
-            h2 {
-                margin: 0em;
-                display: inline-block;
-                font-size: 1.5rem;
-            }
-        }
-    }
-}
-
-.line-mobile {
-    background: $dark;
-    width: 100%;
-    height: 1em;
-    bottom:0px;
-}
-.div2-mobile {
-    margin-top: 1em;
-    background-color: $dark;
-    .image {
-        width: 100%;
-        height: 100%;
-        padding: 1em;
-    }
-
-    .text {
-        // display: flex;
-        align-items: center;
-        color: white;
-        padding: 1em;
-        margin: 0em;
-        height: 100%;
-        font-size: 1.1em;
-    }
-}
-
-.div3-mobile {
-    height: 100%;
-    width: 100%;
-    padding: 3em;
-}
-
 .div4-mobile {
+    text-align: center;
+    padding: 2em;
+    background-color: $dark;
     h1 {
         color: $dark;
         -webkit-text-fill-color: $color_3; /* Will override color (regardless of order) */
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: $dark;
-        font-size: 3.5em;
+        font-size: 2.5em;
     }
     .image {
         width: 100%;
@@ -330,12 +264,11 @@ br {
     background-color: $color_2;
     .image {
         width: 100%;
-        height: 100%;
+        // height: 100%;
         padding: 1em;
     }
 
     .text {
-        // display: flex;
         align-items: center;
         color: $dark;
         padding: 1em;
@@ -381,13 +314,12 @@ br {
 }
 
 .div8-mobile {
-    
     width: 100%;
     height: 100%;
     .slide {
         text-align: center;
         .item {
-            width:90%;
+            width:40%;
             height:auto;
         }
     }
