--- a/web/src/app/home/home.component.scss
+++ b/web/src/app/home/home.component.scss
@@ -2,6 +2,8 @@
 
 // background-color: $color_4;
 
+
+// not mobile
 br {
     display: block;
     margin: 10px 0;
@@ -9,16 +11,17 @@ br {
     content: " ";
  }
 
-.title {
-    background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
-    height: 2.7em; //watch this
-    width: 20%;
+ .title {
+    width: 100%;
     padding: 0em 1em 0em 1em;
     margin-top: 1em;
     position: relative;
     transform: skew(-10deg);
+    height: 2.7em; //watch this
     .text {
+        height: 2.7em; //watch this
         position: absolute;
+        background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
     }
 }
 
@@ -192,6 +195,389 @@ br {
                 // background-color: #4CAF50;
                 color: $color_3;
                 font-size: 2.5em;
+                padding: 16px 32px;
+            }
+              
+              .container:hover .image {
+                opacity: 0.3;
+              }
+              
+              .container:hover .middle {
+                opacity: 1;
+            }
+              .container:hover .text {
+                color: $dark;
+            }
+              
+        }
+    }
+}
+
+.footer-separator {
+    height: 6em;
+}
+
+
+.container {
+    padding: 2rem 0rem;
+  }
+  
+  h4 {
+    margin: 2rem 0rem 1rem;
+  }
+  
+  .table-image {
+    td, th {
+      vertical-align: middle;
+     
+    }
+  }
+
+// CALENDARIO
+
+  body{margin-top:20px;}
+.idance .classes-details ul.timetable {
+    margin: 0 0 22px;
+    padding: 0;
+}
+.idance .classes-details ul.timetable li {
+    list-style: none;
+    font-size: 15px;
+    color: #7f7f7f;
+}
+idance .timetable {
+    max-width: 900px;
+    margin: 0 auto;
+}
+.idance .timetable-item {
+    border: 1px solid #d8e3eb;
+    padding: 15px;
+    margin-top: 20px;
+    position: relative;
+    display: block;
+}
+@media (min-width: 768px) {
+    .idance .timetable-item {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+}
+.idance .timetable-item-img {
+    overflow: hidden;
+    height: 100px;
+    width: 100px;
+    display: none;
+}
+.idance .timetable-item-img img {
+    height: 100%;
+}
+@media (min-width: 768px) {
+    .idance .timetable-item-img {
+        display: block;
+    }
+}
+.idance .timetable-item-main {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    position: relative;
+    margin-top: 12px;
+}
+@media (min-width: 768px) {
+    .idance .timetable-item-main {
+        margin-top: 0;
+        padding-left: 15px;
+    }
+}
+.idance .timetable-item-time {
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 4px;
+}
+.idance .timetable-item-name {
+    font-size: 14px;
+    margin-bottom: 19px;
+}
+.idance .btn-book {
+    padding: 6px 30px;
+    width: 100%;
+    background-color: $color_1;
+    color: white;
+}
+.idance .timetable-item-like {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.idance .timetable-item-like .fa-heart-o {
+    display: block;
+    color: #b7b7b7;
+}
+.idance .timetable-item-like .fa-heart {
+    display: none;
+    color: #f15465;
+}
+.idance .timetable-item-like:hover .fa-heart {
+    display: block;
+}
+.idance .timetable-item-like:hover .fa-heart-o {
+    display: none;
+}
+.idance .timetable-item-like-count {
+    font-size: 12px;
+    text-align: center;
+    padding-top: 5px;
+    color: #7f7f7f;
+}
+.idance .timetable-item-book {
+    width: 200px;
+}
+.idance .timetable-item-book .btn {
+    width: 100%;
+}
+.idance .schedule .nav-tabs {
+    border-bottom: 2px solid #104455;
+}
+.idance .schedule .nav-link {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    font-size: 12px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #3d3d3d;
+    font-weight: 500;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+    border-radius: 2px 2px 0 0;
+    padding-left: 0;
+    padding-right: 0;
+    cursor: pointer;
+}
+@media (min-width: 768px) {
+    .idance .schedule .nav-link {
+        font-size: 16px;
+    }
+}
+.idance .schedule .nav-link.active {
+    background: #104455;
+    border-color: #104455;
+    color: #fff;
+}
+.idance .schedule .nav-link.active:focus {
+    border-color: #104455;
+}
+.idance .schedule .nav-link:hover:not(.active) {
+    background: #46c1be;
+    border-color: #46c1be;
+    color: #fff;
+}
+.idance .schedule .tab-pane {
+    padding-top: 10px;
+}
+
+
+
+
+
+
+// MOBILE
+
+br {
+    display: block;
+    margin: 10px 0;
+    line-height:22px;
+    content: " ";
+ }
+
+ .title-mobile {
+    width: 100%;
+    padding: 0em 1em 0em 1em;
+    margin-top: 1em;
+    position: relative;
+    transform: skew(-10deg);
+    height: 2.7em; //watch this
+    .text-mobile {
+        height: 2.7em; //watch this
+        position: absolute;
+        background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
+    }
+}
+
+.btn-class {
+    background-color: $color_1;
+    color: white;
+}
+
+.div1-mobile {
+    width: 100%;
+    height: 60vh;
+    position: relative;
+
+    background-image: url("../../assets/img/image1.png");
+    background-size: 50%;
+    background-position-x: right;
+    background-position-y: center;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .image-mobile {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    .text-mobile {
+        position: absolute;
+        color: $color_4;
+        h1 {
+            
+            font-size: 3rem;
+            margin-top: 2em;
+        }
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    .bottom-mobile {
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        justify-content: center;
+
+        .text-mobile {
+            background: $dark;
+            color: $color_3;
+            width: auto;
+            display: inline-block;
+            padding: 1em;
+            margin: 0em;
+            h2 {
+                margin: 0em;
+                display: inline-block;
+            }
+        }
+    }
+}
+
+
+.line-mobile {
+    background: $dark;
+    width: 100%;
+    height: 1em;
+    bottom:0px;
+}
+
+.div2-mobile {
+    margin-top: 1em;
+    background-color: $dark;
+    .image-mobile {
+        width: 100%;
+        // height: 100%;
+        padding: 1em;
+    }
+
+    .text-mobile {
+        // display: flex;
+        align-items: center;
+        color: white;
+        padding: 1em;
+        margin: 0em;
+        height: 100%;
+        font-size: 1.1em;
+        br {
+            margin: 0.3em;
+        }
+    }
+}
+
+.carrusel {
+    width: 100%;
+    height: 100%;
+    .slide {
+        text-align: center;
+        max-height: 100%;
+        .item {
+            width: 60%;
+            height: 100%;
+        }
+    }
+    
+}
+
+.title {
+    background: linear-gradient(to top, $color_2 30%, #f7f7f7 30%);
+    height: 2.7em; //watch this
+    width: 20%;
+    padding: 0em 1em 0em 1em;
+    margin-top: 1em;
+    position: relative;
+    transform: skew(-10deg);
+    .text {
+        position: absolute;
+    }
+}
+
+.sections {
+    margin-top: 1.5em;
+    .row {
+        // width: 100%;
+        // height: 20em;
+        .col-6 {
+            padding: 0em;
+            .container {
+                padding: 0px;
+                margin-top: 0.5em;
+                position: relative;
+                // width: 50%;
+                height: 100%;
+              }
+              
+            //   .image {
+            //     opacity: 1;
+            //     display: block;
+            //     width: 100%;
+            //     height: auto;
+            //     transition: .5s ease;
+            //     backface-visibility: hidden;
+            //     padding: 0.5em;
+            //   }
+
+              .image {
+                opacity: 1;
+                display: block;
+                transition: .5s ease;
+                backface-visibility: hidden;
+                padding: 0.5em;
+                width: 100%;
+                object-fit: cover;
+                height: 100%;
+                filter: brightness(50%);
+              }
+              
+              .middle-mobile {
+                transition: .5s ease;
+                // opacity: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                text-align: center;
+              }
+
+            .text-mobile {
+                // background-color: #4CAF50;
+                color: $color_3;
+                font-size: 1em;
                 padding: 16px 32px;
             }
               
