--- a/web/src/app/shared/topmenu/topmenu.component.html
+++ b/web/src/app/shared/topmenu/topmenu.component.html
@@ -1,8 +1,8 @@
 <!-- <div class="top-container"></div> -->
-<div class="header">
+<div class="header" *ngIf="isMobileResolution == false">
     
     <div class="container" style="max-width: 100% !important">
-        
+        <iframe *ngIf="iframeVisibility" src="http://192.99.10.29:8457/live" width="100%" scrolling="no" style="border:none; background-color: black; height: 2em;"></iframe>
         
         <nav class="navbar navbar-expand-md navbar-light bg-faded">
             <div class="text-left">
@@ -33,20 +33,52 @@
         </nav>
     </div>
 
-    <iframe *ngIf="iframeVisibility" src="http://192.99.10.29:8457/live" width="100%" scrolling="no" style="border:none; background-color: black; height: 2em;"></iframe>
+  
+</div>
 
-    <!-- 
-    <div class="hidder" *ngIf="iframeVisibility">
-        <button class="button" (click)="hideIframe()">
-            Ocultar
-        </button>
-    </div>
-    <iframe *ngIf="iframeVisibility" src="http://192.99.10.29:8457/live" height="110" width="100%" scrolling="no" style="border:none; background-color: black;"></iframe>
+<!-- MOBILE -->
+
+<!-- <div class="top-container"></div> -->
+<div class="header" *ngIf="isMobileResolution == true">
+
+<div class="container" style="max-width: 100% !important">
+    <iframe *ngIf="iframeVisibility" src="http://192.99.10.29:8457/live" width="100%" scrolling="no" style="border:none; background-color: black; height: 2em;"></iframe>
+    <nav class="navbar navbar-expand-md navbar-light bg-faded">
+        <div class="text-left">
+            <a routerLink="/home">
+                <img src="assets/img/image2.png" style="height: 3rem;">
+            </a>
+        </div>
+        <a class="navbar-brand" routerLink="/home">
+        </a>
+
+        <div class="text-right">
+            <button type="button" class="btn class-btn" style="color: white; font-size: 10px;" routerLink="/audios">
+                <!-- <i class="fa fa-users"></i> -->
+                Audios
+            </button>
+
+            <button type="button" class="btn class-btn" style="color: white; font-size: 10px;" routerLink="/videos">
+                <!-- <i class="fa fa-user-circle-o"></i> -->
+                Videos
+            </button>
+
+            <button type="button" class="btn class-btn" style="color: white; font-size: 10px;" routerLink="/events">
+                <!-- {{user}} -->
+                Eventos
+            </button>
+            
+            <button  type="button" class="btn class-btn" style="color: white; font-size: 10px;" routerLink="/records">
+                <!-- <i class="fa fa-sign-out"></i> -->
+                Capacitaciones
+            </button>
     
-    <div class="hidder" *ngIf="!iframeVisibility">
-        <button class="buttonRep" (click)="hideIframe()">
-            Reproductor
-        </button>
-    </div> 
-    -->
+        </div>
+       
+
+    </nav>
+</div>
+
+
+  
 </div>
