--- a/web/src/app/videos/videos.component.scss
+++ b/web/src/app/videos/videos.component.scss
@@ -94,3 +94,107 @@
 .footer-separator {
     height: 6em;
 }
+
+
+
+
+
+
+
+
+// mobile
+
+.div1-mobile {
+    width: 100%;
+    height: 60vh;
+    position: relative;
+
+    background-image: url("../../assets/definitive/1.jpg");
+    background-size: 50%;
+    background-position-x: right;
+    background-position-y: center;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .image {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    .text {
+        position: absolute;
+        // margin: 2em;
+        color: $color_4;
+        h1 {
+            font-size: 3rem;
+            margin-top: 2em;
+        }
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+}
+
+.div2-mobile {
+    margin-top: 1em;
+    background-color: $dark;
+    .image {
+        width: 70%;
+        // height: 100%;
+        padding: 1em;
+    }
+
+    .text {
+        // display: flex;
+        align-items: center;
+        color: white;
+        padding: 2em;
+        margin: 0em;
+        height: 100%;
+        font-size: 0.8rem;
+        br {
+            margin: 0.3em;
+        }
+    }
+}
+
+
+.line {
+    background: $dark;
+    width: 100%;
+    height: 1em;
+    bottom:0px;
+}
+
+.categories-mobile {
+    width: 100%;
+    .square {
+        width: 100%;
+        text-align: center;
+        color: $mediumgray;
+
+        border: 3px;
+        border-radius: 10px;
+        border-style: solid;
+        border-color: $pink;
+        
+        padding: 1em;
+        margin-bottom: 1em;
+        margin-top: 1em;
+        .fas {
+            font-size: 5em;
+            transition: .5s ease;
+        }
+    }
+    .square:hover .fas {
+        color: $pink;
+
+    }
+}
+
+.footer-separator {
+    height: 6em;
+}
